Updated fonts Fixed an issue where episode titles were wrapped in the .search_result class

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 * {box-sizing: border-box;}
 
 html, body{
-    font-family: 'Helvetica', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #202021;
@@ -10,11 +10,22 @@ html, body{
 }
 
 h2{
-    font-size: 2.7rem;
+    font-size: 2.8rem;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 7px;
+    margin-bottom: -1px;
+}
+.small_title {
+    font-weight: 400;
+}
+
+.large_title{
+    font-weight: 700;
+    font-size: 4.7rem;
 }
 
 p{
-    font-size: 1.15rem;
+    font-size: 1.22rem;
 }
 
 a {
@@ -23,15 +34,16 @@ a {
 }
 
 .search_result{
-    border-bottom: 2px solid #684cb0;
+    border-bottom: 1px solid #684cb0;
     margin-bottom: 40px;
     padding-bottom: 7px;
     text-align: left;
 }
 
 .episode_title{
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.9rem;
     letter-spacing: 3px;
     transition: .2s;
 }
